fixed minor bugs in registration

--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -193,7 +193,7 @@
             <select
               class="form-select"
               aria-label="Default select example"
-              id="Suffic"
+              id="Suffix"
               name="Suffix"
             >
               <option selected disabled value>Suffix</option>
@@ -597,8 +597,8 @@
 
         });
 
-        var input = document.querySelectorAll(".form-floating input");
-        var select = document.querySelectorAll(".form-select");
+        var inputs = document.querySelectorAll(".form-floating input");
+        var selects = document.querySelectorAll(".form-select");
 
         inputs.forEach(function (input) {
           input.addEventListener("input", function () {
