--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -507,8 +507,10 @@
                     for (var i = 0; i < properties.length; i++) { 
                         propertyHtml += '<div class="col">';
                         propertyHtml += '<div class="card shadow-sm">';
+                        propertyHtml += '<a href="" data-bs-toggle="modal" data-bs-target="#myDetails' +properties[i].id + '">';
                         var imageUrl = '/static/images/property_imgs/' + properties[i].bg_image;
                         propertyHtml += '<img class="bd-placeholder-img card-img-top" src="' + imageUrl + '" width="100%" height="225" alt="">';                       
+                        propertyHtml += '</a>';
                         propertyHtml += '<div class="card-body">';
                         propertyHtml += '<h2 class="card-title">' + properties[i].name + '</h2>';
                         propertyHtml += '<p class="card-text"><strong>Seller: </strong>' + properties[i].seller + '</p>';
